# Hypersend

./: .env  .env.docker  .env.example  .env.production  .env.production.example  .env.template  .gitignore  000_START_HERE.md  00_START_HERE.md  API_CONFIGURATION_GUIDE.md  APK_BUILD_COMPLETE.md  APK_BUILD_GUIDE.md  APK_CONFIGURATION.md  ARCHITECTURE_COMPARISON.md  ARCHITECTURE_DIAGRAM.md  AUTHENTICATION_FIXES_SUMMARY.md  BACKEND_ERROR_FIX.md  BACKEND_FIX_GUIDE.md  BACKEND_SETUP_GUIDE.md  BUILD_GUIDE.py  CODE_AUDIT.md  CODE_SCAN_REPORT.md  COMPLETE_FIX.sh  COMPLETE_FIX_REPORT.md  COMPLETE_STATUS_SUMMARY.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.txt  CORS_AND_AUTH_DEBUGGING.md  CORS_FIX_SUMMARY.md  COST_OPTIMIZATION.md  CRITICAL_FIX_SUMMARY.md  DEBUGGING_FIXES.md  DEEP_CODE_SCAN.md  DEEP_CODE_SCAN_PASSWORD_RESET.md  DEEP_SCAN_LOGIN_PASSWORD_RESET.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  (+280 more)
.ebextensions/: python.config
.github/workflows/: deploy-backend.yml  deploy-backend2.yml  deploy-dockerhub.yml  deploy-frontend.yml  deploy-production.yml  deploy.yml  deploy_full.yml
backend/: .env.backup  Dockerfile  __init__.py  config.py  config.py.backup  database.py  db_proxy.py  device_key_manager.py  e2ee_crypto.py  e2ee_service.py  entrypoint.sh  error_handlers.py  main.py  mock_database.py  mock_database.py.backup  models.py  mongo_init.py  notification_service.py  rate_limiter.py  redis_cache.py  requirements.txt  security.py  test_all_fixes.py  test_comprehensive_security.py  test_core_fixes.py  test_final_integration.py  test_http_errors.py  test_mongo_connection.py  test_production_stabilization.py  test_validation.py  test_verification_complete.py  validators.py  verify_server_restart.py  websocket_main.py
backend/auth/: __init__.py  utils.py
backend/crypto/: abuse_detection.py  client_security.py  delivery_semantics.py  encrypted_backup.py  encrypted_calls.py  media_encryption.py  multi_device.py  signal_protocol.py
backend/migrations/: fix_deleted_from_fields.py
backend/routes/: __init__.py  attachments.py  auth.py  channels.py  chats.py  debug.py  devices.py  e2ee_messages.py  emoji_picker.py  files.py  groups.py  groups.py.backup  messages.py  p2p_transfer.py  presence.py  status.py  updates.py  users.py
backend/services/: __init__.py  emoji_service.py  file_cleanup_service.py  message_history_service.py  relationship_graph_service.py  s3-cors-configuration.json  s3-iam-policy.json
backend/utils/: datetime_utils.py  email_service.py  s3_utils.py
backend/websocket/: __init__.py  delivery_handler.py  websocket_manager.py
backend/workers/: fan_out_worker.py
certs/live/zaply.in.net/: fullchain.pem  privkey.pem
docs/: NGINX_SETUP.md  SECURITY_SPECIFICATION.md
frontend/: .dockerignore  .env.production  .gitignore  APK_BUILD_HINDI.md  BUILD_APK.md  Dockerfile  README.md  __init__.py  analysis_options.yaml  api_client.py  app.py  build_apk.py  build_output.txt  docker-compose.yml  emoji_data.py  error_handler.py  nginx.conf  permissions_manager.py  pubspec.yaml  pyproject.toml  requirements.txt  session_manager.py  test_functions.py  test_messaging.py  test_zaply_complete.py  theme.py  update_manager.py
frontend/android/: AndroidManifest.xml
frontend/android/app/: build.gradle.kts
frontend/assets/: index.html  manifest.json  manifeston.json
frontend/ios/Runner/: Info.plist
frontend/lib/: main.dart
frontend/lib/core/constants/: api_constants.dart  app_strings.dart
frontend/lib/core/router/: app_router.dart
frontend/lib/core/theme/: app_theme.dart
frontend/lib/core/utils/: emoji_utils.dart  error_handler.dart  time_formatter.dart
frontend/lib/crypto/: media_encryption_client.dart  signal_protocol_client.dart
frontend/lib/data/mock/: mock_data.dart
frontend/lib/data/models/: chat.dart  group.dart  group_activity.dart  group_member.dart  message.dart  permission.dart  user.dart
frontend/lib/data/services/: api_service.dart  api_service_fixed.dart  auth_service.dart  file_transfer_io.dart  file_transfer_io_stub.dart  file_transfer_service.dart  profile_service.dart  service_provider.dart  settings_service.dart  simple_api_service.dart  websocket_service.dart
frontend/lib/l10n/: app_localizations.dart
frontend/lib/presentation/screens/: auth_screen.dart  (+23 more)
frontend/lib/security/: client_security_manager.dart
frontend/linux/: CMakeLists.txt  my_application.desktop
frontend/linux/flutter/: CMakeLists.txt  generated_plugins.cmake.backup
frontend/linux/runner/: CMakeLists.txt
frontend/test/: branding_test.dart  widget_test.dart
frontend/views/: __init__.py  chats.py  file_upload.py  login.py  message_view.py  permissions.py  profile.py  saved_messages.py  settings.py
frontend/web/: 404.html  firebase-config.js  index.html  manifest.json
scan_reports/: bandit_report.json  flake8_report.txt  mypy_report.xml
scripts/: cleanup_broken_files.py  generate-ssl-certs.sh  run_testsprite_mcp.js  run_testsprite_via_mcp.js  seed_mongodb.py  setup-ssl.sh  test_download_api.py
ssl/: README.md
ssl-certs/: zaply.in.net.crt  zaply.in.net.key
tests/: .env.example  COMPREHENSIVE_SECURITY_AUDIT.py  FINAL_TEST_FIXES_SUMMARY.md  FINAL_VERIFICATION.py  README.md  add_members_example.py  apply-s3-cors.py  check_complex_emojis.py  check_emoji_mismatch.py  check_endpoints.py  check_files.py  check_files_simple.py  check_user_password.py  cleanup_avatars.py  comprehensive_api_test.py  comprehensive_auth_test.py  comprehensive_download_fix_verification.py  comprehensive_security_validation.py  comprehensive_test.py  comprehensive_validation.py  conftest.py  count_emojis.py  create_file_record.py  database_connection_fix.py  debug_500_error.py  debug_condition.py  debug_download_error.py  debug_emoji.py  debug_emoji_service.py  debug_emoji_simple.py  debug_emoji_test.py  debug_filename.py  debug_hash.py  debug_logic.py  debug_mime.py  debug_test.py  debug_url.py  debug_url_simple.py  deep_404_fix.py  deep_async_scan.py  (+280 more)
testsprite_tests/: standard_prd.json  testsprite_frontend_test_plan.json
(+8 files in other folders)
