[project]
name = "Zaply"
version = "1.0.0"
description = "Zaply - secure P2P chat and file transfer application"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mayank", email = "mayank.kr0311@gmail.com" }
]
license = { text = "nginx" }

dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "motor==3.6.0",
  "pydantic==2.11.5",
  "pydantic-settings==2.6.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.2.1",
  "python-multipart==0.0.20",
  "aiofiles==24.1.0",
  "httpx[http2]>=0.28.1",
  "h2>=4.1.0",
  "python-dotenv==1.0.1",
  "PyJWT==2.10.1",
  "flet>=0.28.3",
]

[project.optional-dependencies]
backend = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "motor==3.6.0",
  "pydantic[email]==2.11.5",
  "pydantic-settings==2.6.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.2.1",
  "python-multipart==0.0.20",
  "aiofiles==24.1.0",
  "httpx[http2]>=0.28.1",
  "h2>=4.1.0",
  "python-dotenv==1.0.1",
  "PyJWT==2.10.1",
]

frontend = [
  "flet>=0.28.3",
  "httpx[http2]>=0.27.0",
  "pydantic==2.11.5",
  "python-multipart==0.0.20",
  "python-dotenv==1.0.1",
  "h2>=4.1.0",
]

[tool.zaply]
app_name = "Zaply"
backend_url_dev = "http://139.59.82.105:8000"
backend_url_prod = "${PRODUCTION_API_URL}"
frontend_dir = "frontend"
backend_dir = "backend"

[tool.update_manager]
current_version = "1.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ========== FLET BUILD CONFIGURATION ==========
[tool.flet]
module_name = "frontend.app"
product = "Zaply"
project = "zaply"
org = "com.zaply"
description = "Secure P2P File Transfer and Messaging"
# Zaply Lightning + Z icon - Used for all platforms (APK, Web, Desktop)
icon = "frontend/assets/favicon.ico"
# Splash screen icon
package_icons_dir = "frontend/assets"

# APK Size Optimization
build_android_split_per_abi = true
android_architectures = ["arm64-v8a"]

[tool.flet.android]
split_per_abi = true
min_sdk_version = 21
target_sdk_version = 33

# Android Permissions
[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.ACCESS_FINE_LOCATION" = true
"android.permission.ACCESS_COARSE_LOCATION" = true
"android.permission.CAMERA" = true
"android.permission.RECORD_AUDIO" = true
"android.permission.READ_CONTACTS" = true
"android.permission.WRITE_CONTACTS" = true
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.READ_MEDIA_IMAGES" = true
"android.permission.READ_MEDIA_VIDEO" = true
"android.permission.ACCESS_NETWORK_STATE" = true
