[project]
name = "Hypersend"
version = "1.0.0"
description = "Hypersend - secure P2P chat and file transfer application"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mayank", email = "mayank.kr0311@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "motor==3.6.0",
  "pydantic==2.11.5",
  "pydantic-settings==2.6.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.2.1",
  "python-multipart==0.0.20",
  "aiofiles==24.1.0",
  "httpx[http2]>=0.28.1",
  "h2>=4.1.0",
  "python-dotenv==1.0.1",
  "PyJWT==2.10.1",
  "flet>=0.28.3",
]

[project.optional-dependencies]
backend = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "motor==3.6.0",
  "pydantic[email]==2.11.5",
  "pydantic-settings==2.6.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "bcrypt==4.2.1",
  "python-multipart==0.0.20",
  "aiofiles==24.1.0",
  "httpx[http2]>=0.28.1",
  "h2>=4.1.0",
  "python-dotenv==1.0.1",
  "PyJWT==2.10.1",
]

frontend = [
  "flet>=0.28.3",
  "httpx[http2]>=0.27.0",
  "pydantic==2.11.5",
  "python-multipart==0.0.20",
  "python-dotenv==1.0.1",
  "h2>=4.1.0",
]

[tool.hypersend]
app_name = "Hypersend"
backend_url_dev = "http://localhost:8000"
backend_url_prod = "https://example.com/api/v1"
backend_url_base = "https://example.com"
frontend_dir = "frontend"
backend_dir = "backend"

[tool.update_manager]
current_version = "1.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ========== FLET BUILD CONFIGURATION ==========
[tool.flet]
module_name = "frontend.app"
product = "Zaply"
project = "zaply"
org = "com.zaply"
description = "Secure P2P File Transfer and Messaging"
# Zaply Lightning + Z icon - Used for all platforms (APK, Web, Desktop)
icon = "frontend/assets/favicon.ico"
# Splash screen icon

# Android permissions
[tool.flet.android]
permissions = [
    "android.permission.INTERNET",
    "android.permission.ACCESS_NETWORK_STATE",
    "android.permission.ACCESS_FINE_LOCATION",
    "android.permission.ACCESS_COARSE_LOCATION",
    "android.permission.CAMERA",
    "android.permission.RECORD_AUDIO",
    "android.permission.READ_CONTACTS",
    "android.permission.WRITE_CONTACTS",
    "android.permission.READ_EXTERNAL_STORAGE",
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.READ_MEDIA_IMAGES",
    "android.permission.READ_MEDIA_VIDEO",
    "android.permission.MANAGE_EXTERNAL_STORAGE",
    "android.permission.WAKE_LOCK",
    "android.permission.VIBRATE",
    "android.permission.FOREGROUND_SERVICE",
    "android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"
]
package_icons_dir = "frontend/assets"

# APK Size Optimization
build_android_split_per_abi = true
android_architectures = ["arm64-v8a"]
split_per_abi = true
min_sdk_version = 21
target_sdk_version = 33
