[project]
name = "Zaply"
version = "1.0.0"
description = "Zaply - secure P2P chat and file transfer application"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mayank", email = "mayank.kr0311@gmail.com" }
]
license = { text = "MIT" }

dependencies = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "motor==3.6.0",
  "pydantic[email]==2.11.5",
  "pydantic-settings==2.6.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.20",
  "aiofiles==24.1.0",
  "httpx[http2]>=0.28.1",
  "python-dotenv==1.0.1",
  "PyJWT==2.10.1",
  "flet>=0.28.3",
]

[project.optional-dependencies]
test = [
  "pytest>=8.4.2",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.0",
  "bandit[toml]>=1.7.6",
  "flake8>=7.1.0",
  "mypy>=1.9.0",
  "black>=24.4.0",
  "isort>=5.13.0",
  "pre-commit>=3.7.0",
]

backend = [
  "fastapi==0.115.5",
  "uvicorn[standard]==0.32.1",
  "motor==3.6.0",
  "pydantic[email]==2.11.5",
  "pydantic-settings==2.6.1",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "python-multipart==0.0.20",
  "aiofiles==24.1.0",
  "httpx[http2]>=0.28.1",
  "python-dotenv==1.0.1",
  "PyJWT==2.10.1",
]

frontend = [
  "flet>=0.28.3",
  "httpx[http2]>=0.27.0",
  "pydantic==2.11.5",
  "python-multipart==0.0.20",
  "python-dotenv==1.0.1",
]

code-scan = [
  "bandit[toml]>=1.7.6",
  "flake8>=7.1.0",
  "mypy>=1.9.0",
  "black>=24.4.0",
  "isort>=5.13.0",
  "pylint>=3.2.0",
  "safety>=3.2.0",
  "semgrep>=1.78.0",
  "ruff>=0.6.0",
]

[tool.zaply]
app_name = "Zaply"
backend_url_dev = "https://zaply.in.net/api/v1"
backend_url_prod = "https://zaply.in.net/api/v1"
backend_url_base = "https://zaply.in.net"
frontend_dir = "frontend"
backend_dir = "backend"

[tool.update_manager]
current_version = "1.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# ========== FLET BUILD CONFIGURATION ==========
[tool.flet]
module_name = "frontend.app"
product = "Zaply"
project = "zaply"
org = "com.zaply"
description = "Secure P2P File Transfer and Messaging"
# Zaply Lightning + Z icon - Used for all platforms (APK, Web, Desktop)
icon = "frontend/assets/favicon.ico"
# Splash screen icon

# Android permissions
[tool.flet.android]
permissions = [
    "android.permission.INTERNET",
    "android.permission.ACCESS_NETWORK_STATE",
    "android.permission.ACCESS_FINE_LOCATION",
    "android.permission.ACCESS_COARSE_LOCATION",
    "android.permission.CAMERA",
    "android.permission.RECORD_AUDIO",
    "android.permission.READ_CONTACTS",
    "android.permission.WRITE_CONTACTS",
    "android.permission.READ_EXTERNAL_STORAGE",
    "android.permission.WRITE_EXTERNAL_STORAGE",
    "android.permission.READ_MEDIA_IMAGES",
    "android.permission.READ_MEDIA_VIDEO",
    "android.permission.MANAGE_EXTERNAL_STORAGE",
    "android.permission.WAKE_LOCK",
    "android.permission.VIBRATE",
    "android.permission.FOREGROUND_SERVICE",
    "android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"
]
package_icons_dir = "frontend/assets"

# APK Size Optimization
build_android_split_per_abi = true
android_architectures = ["arm64-v8a"]
split_per_abi = true
min_sdk_version = 21
target_sdk_version = 33

[tool.pytest]
minversion = "8.0"
addopts = [
  "-ra", 
  "-q", 
  "--strict-markers", 
  "--strict-config"
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_scope = "function"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "security: marks tests as security tests",
  "scan: marks tests for code scanning",
]

[tool.pytest-asyncio]
mode = "auto"
# Note: asyncio_default_fixture_scope removed to avoid duplicate config warning

# ========== DEEP CODE SCAN CONFIGURATION ==========
[tool.code_scanner]
enabled = true
scan_depth = "deep"
pytest_integration = true
exclude_patterns = [
  "*/__pycache__/*",
  "*/node_modules/*",
  "*/.git/*",
  "*/venv/*",
  "*/env/*",
  "*/dist/*",
  "*/build/*",
  "*.pyc",
  "*.pyo",
  "*.pyd",
  ".DS_Store",
  "Thumbs.db"
]

# Security scanning with pytest integration
[tool.code_scanner.security]
enable_security_scan = true
pytest_marker = "security"
security_rules = [
  "hardcoded_secrets",
  "sql_injection", 
  "xss_vulnerabilities",
  "path_traversal",
  "insecure_deserialization",
  "weak_cryptography",
  "authentication_bypass",
  "authorization_issues",
  "input_validation",
  "dependency_vulnerabilities"
]
severity_levels = ["critical", "high", "medium", "low"]
fail_on_critical = true
fail_on_high = true
bandit_integration = true

# Logic analysis with pytest
[tool.code_scanner.logic]
enable_logic_analysis = true
pytest_marker = "scan"
logic_checks = [
  "dead_code",
  "unreachable_code", 
  "infinite_loops",
  "resource_leaks",
  "race_conditions",
  "complexity_analysis",
  "code_duplication",
  "performance_bottlenecks",
  "error_handling_gaps"
]
max_complexity = 10
max_duplication_percentage = 15
mypy_integration = true

# Code quality analysis
[tool.code_scanner.quality]
enable_quality_scan = true
pytest_marker = "scan"
quality_metrics = [
  "maintainability_index",
  "cyclomatic_complexity", 
  "code_coverage",
  "test_effectiveness",
  "documentation_coverage",
  "naming_conventions",
  "code_formatting",
  "import_analysis",
  "unused_imports",
  "unused_variables"
]
min_maintainability_score = 70
min_code_coverage = 80
flake8_integration = true
black_integration = true
isort_integration = true

# Backend specific scanning
[tool.code_scanner.backend]
scan_paths = ["backend", "tests"]
framework = "fastapi"
check_database_queries = true
check_api_endpoints = true
check_authentication = true
check_authorization = true
check_input_validation = true
check_error_handling = true
check_logging = true
check_configuration = true

# Frontend specific scanning  
[tool.code_scanner.frontend]
scan_paths = ["frontend"]
framework = "flet"
check_ui_components = true
check_state_management = true
check_user_input = true
check_data_validation = true
check_network_requests = true
check_local_storage = true
check_permissions = true

# Pytest integration configuration
[tool.code_scanner.pytest]
enable_pytest_integration = true
scan_before_tests = true
scan_after_tests = true
parallel_scanning = true
fail_on_scan_errors = false
scan_test_files = true
coverage_integration = true

# Reporting configuration
[tool.code_scanner.reporting]
output_format = ["json", "html", "sarif"]
output_directory = "scan_reports"
include_source_code = true
include_fix_suggestions = true
generate_summary = true
trend_analysis = true
pytest_report_format = true

# Tool integrations
[tool.code_scanner.integrations]
enable_bandit = true
enable_flake8 = true
enable_mypy = true
enable_black = true
enable_isort = true
enable_pylint = true
enable_safety = true
enable_semgrep = true
enable_ruff = true
pytest_plugins = [
  "pytest-bandit",
  "pytest-cov",
  "pytest-mypy"
]

# Advanced settings
[tool.code_scanner.advanced]
data_flow_analysis = true
control_flow_analysis = true
interprocedural_analysis = true
taint_analysis = false
symbolic_execution = false
machine_learning_analysis = false
cross_language_analysis = true
dependency_graph_analysis = true
pytest_parallel_workers = 4

# ========== CODE QUALITY TOOLS CONFIGURATION ==========
[tool.bandit]
exclude_dirs = ["tests", "venv", "env"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "venv", "env"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = """/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/"""

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "C90", "I", "N", "UP", "S", "B", "A"]
ignore = ["E501", "B008"]
exclude = [".git", "__pycache__", "venv", "env"]
